Fix wrong gradient color on collapsed private mentions (#2402)
Upstream changed the background color of private mentions, but the gradient used for collapsed toots still used the old color.

--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -362,8 +362,8 @@
 
     &.status-direct > .status__content::after {
       background: linear-gradient(
-        rgba(lighten($ui-base-color, 8%), 0),
-        rgba(lighten($ui-base-color, 8%), 1)
+        rgba(mix($ui-base-color, $ui-highlight-color, 95%), 0),
+        rgba(mix($ui-base-color, $ui-highlight-color, 95%), 1)
       );
     }
 
